spring-boot-istio-routing-client/src/main/fabric8/dc.yml
apiVersion: v1
kind: Deployment
spec:
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: 'true'
    spec:
      containers:
      - livenessProbe:
          failureThreshold: 2
          initialDelaySeconds: 60
          periodSeconds: 3
          successThreashold: 1
          timeoutSeconds: 1
          exec:
            command:
            - curl
            - http://localhost:8080/actuator/health
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreashold: 1
          timeoutSeconds: 1
          exec:
            command:
            - curl
            - http://localhost:8080/actuator/health
